--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@ant-design/icons": "^4.6.2",
     "antd": "^4.16.5",
+    "axios": "^0.21.1",
     "bootstrap": "^5.0.2",
     "next": "^11.0.1",
     "react": "^17.0.2",
