--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,6 @@
 PORT=8000
 DATABASE=mongodb://localhost:27017/edemy
 JWT_SECRET=DKWKDK23209DFGKG023124LF2944
+# aws
+AWS_ACCESS_KEY_ID=AKIA4JZE2N32OJ5WVQM7 
+AWS_SECRET_ACESS_KEY=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
