--- a/server/.env
+++ b/server/.env
@@ -4,3 +4,8 @@ JWT_SECRET=DKWKDK23209DFGKG023124LF2944
 # aws
 AWS_ACCESS_KEY_ID=AKIA4JZE2N32OJ5WVQM7 
 AWS_SECRET_ACESS_KEY=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
+AWS_REGION='us-east-2'
+AWS_API_VERSION='2010-12-01'
+
+#Email 
+EMAIL_FROM=trungle030195@gmail.com
