--- a/server/package.json
+++ b/server/package.json
@@ -23,6 +23,8 @@
     "mongoose": "^5.12.15",
     "morgan": "^1.10.0",
     "nanoid": "^3.1.23",
-    "nodemon": "^2.0.7"
+    "nodemon": "^2.0.7",
+    "query-string": "^7.0.1",
+    "stripe": "^8.160.0"
   }
 }
