Server render courses for SEO

--- a/client/.env.local
+++ b/client/.env.local
@@ -1,2 +1,4 @@
+#NEXT_PUBLIC prefix to make variable accessible in client side, otherwise it is only accessible in server side
 NEXT_PUBLIC_API=http://localhost:8000/api
 NEXT_PUBLIC_STRIPE_KEY=pk_test_fiYpQcnpDWLEHX6HwzYuHoE700Fv1Turb1
+API=http://localhost:8000/api
