--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "@ant-design/icons": "^4.6.2",
+    "@stripe/stripe-js": "^1.16.0",
     "antd": "^4.16.5",
     "axios": "^0.21.1",
     "bootstrap": "^5.0.2",
