--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "bootstrap": "^5.0.2",
     "express": "^4.17.1",
     "http-proxy-middleware": "^2.0.0",
+    "mongodb-client-encryption": "^1.2.6",
     "next": "^11.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
